fix(design): fix icons vertical alignment

--- a/src/assets/styles/global/framework7-icons.scss
+++ b/src/assets/styles/global/framework7-icons.scss
@@ -15,8 +15,8 @@
   font-weight: normal;
   font-style: normal;
   // font-size: 28px;
-  font-size: 1.2em;
-  vertical-align: middle;
+  font-size: 1.125em;
+  vertical-align: baseline;
   line-height: 1;
   letter-spacing: normal;
   text-transform: none;
